CSS - fix - fixed sliders and runtime info layout problems for safari browser
- fixed most graphical problems on the safari browser

--- a/server/public/CSS/dashboard/controlWidget.css
+++ b/server/public/CSS/dashboard/controlWidget.css
@@ -24,6 +24,7 @@
 
             >*.slider-slider {
                 width: 100%;
+                display: block;
 
                 >* {
                     width: 100%;
